--- a/example.html
+++ b/example.html
@@ -1,7 +1,6 @@
 <html>
 <head>
   <title>Selectable</title>
-  <link rel="stylesheet" type="text/css" href="build/build.css">
   <style>
     * {
       -webkit-user-select: none;
@@ -73,25 +72,11 @@
   </style>
 </head>
 <body>
-<!--   <ul id="pets">
-    <li data-name="tobi">Tobi</li>
-    <li data-name="loki">Loki</li>
-    <li data-name="jane">Jane</li>
-    <li data-name="abby">Abby</li>
-  </ul> -->
-
   <ul id="nums"></ul>
 
   <script src="build/build.js"></script>
   <script>
-    var selectable = require('selectable');
-    // var a = selectable('#pets > li');
-
-    // a.on('change', function(e){
-    //   for (var i = 0; i < e.selected.length; i++) {
-    //     console.log(e.selected[i].getAttribute('data-name'));
-    //   }
-    // });
+    var Choosable = require('choosable');
 
     var n = 1000;
     var nums = document.querySelector('#nums');
@@ -101,12 +86,10 @@
       nums.appendChild(li);
     }
 
-    var b = selectable('#nums > li');
+    var choosable = new Choosable('#nums > li');
 
-    b.on('change', function(e){
-      for (var i = 0; i < e.selected.length; i++) {
-        console.log(e.selected[i].textContent);
-      }
+    choosable.on('change', function(e){
+      console.log(e.selected.textContent);
     });
   </script>
 </body>
